@@ -1413,6 +1413,10 @@ function wml_actions.set_variable(cfg)
 	end
 end
 
+function wesnoth.wml_actions.change_theme(cfg)
+	wesnoth.game_config.theme = cfg.theme
+end
+
 function wesnoth.wml_conditionals.proceed_to_next_scenario(cfg)
 	local endlevel_data = wesnoth.get_end_level_data()
 	if not endlevel_data then
