@@ -14,6 +14,7 @@ Version 1.13.7+dev:
      logging data into a saved game.
    * Small change to animator API - facing parameter replaced with target and required to be
      a space adjacent to the unit.
+   * New modifiable theme attribute in wesnoth.game_config
  * Multiplayer:
    * Fixed statistics being lost when reloading an MP game.
  * Performance:
@@ -38,6 +39,7 @@ Version 1.13.7+dev:
      * Canvas colors can now be expressed as formulas. The formula must return
        the color as a list of its components, eg "([r, g, b, a])"
    * Empty tags are no longer written to the configs of [unit]s and [side]s.
+   * New [change_theme] tag to change the theme mid-scenario
 
 Version 1.13.7:
  * AI:
